@@ -1,6 +1,10 @@
 Changes
 =======
 
+Maint next
+----------
+- Add missing blockxsize, blockysize, tiled keywords (#301).
+
 0.19.0 (2015-03-25)
 -------------------
 - New rio-calc command (#175).
